[tool.poetry]
name = "comfyui-etcd"
version = "0.1.0"
description = ""
authors = ["Carlo <284474102@qq.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
etcd3 = {git = "https://github.com/kragniz/python-etcd3.git"}
load-dotenv = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
